[project]
name = "contactsheet_auto"
description = "A lightweight ComfyUI extension designed to automate the creation of video contact sheets (preview grids)."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["opencv-python", "numpy"]

[project.urls]
Repository = "https://github.com/NexusEast/ComfyUI_ContactSheet_Auto"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/NexusEast/ComfyUI_ContactSheet_Auto/wiki"
"Bug Tracker" = "https://github.com/NexusEast/ComfyUI_ContactSheet_Auto/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_ContactSheet_Auto"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

